# draggos

./: .gitignore  Anchor.toml  README.md  buildspec.yml  package-lock.json
app/: package-lock.json  package.json
app/public/: index.html  manifest.json
app/src/: App.js
app/src/Footer/: FooterContainer.js
app/src/Header/: HeaderContainer.js
app/src/Incubator/: IncubatorContainer.js  index.js
app/src/Landing/: FAQ.js  FiftyPercent.js  Landing.js  LandingContainer.js  Mint.js  Team.js  index.js
app/src/utils/: actions.js  candymachine.js  index.js  utils.js
candymachine/assets/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
programs/anchor-escrow/: Cargo.toml
programs/anchor-escrow/src/: lib.rs
programs/controller/: Cargo.toml
programs/controller/src/: lib.rs  state.rs
programs/incubator/: Cargo.toml
programs/incubator/src/: lib.rs  state.rs
resources/: website.yml
resources/api/: package-lock.json  package.json  serverless.yml
resources/api/tasks/: createMetadata.js
resources/app/: serverless.yml
resources/backend/: package-lock.json  package.json  serverless.yml
resources/backend/tasks/: pollIncubator.js  updateMints.js
resources/cron/: package-lock.json  package.json  serverless.yml
resources/cron/tasks/: pollIncubator.js  updateMints.js
resources/deployment/: serverless.yml
scripts/: fetch.js  package-lock.json  package.json  upload.js
tests/: anchor-escrow.ts  incubator.ts
