[package]
name = "controller"
version = "1.0.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "controller"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = {version = "0.19.0"}
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
incubator = { path = "../incubator", features = ["cpi"] }
